Fix color contrast between link text and bg-light

--- a/css/custom/_variables.scss
+++ b/css/custom/_variables.scss
@@ -3,5 +3,5 @@ SPDX-FileCopyrightText: 2020 Cam N. Coulter <cam@cncoulter.com>
 SPDX-License-Identifier: CC0-1.0
 */
 
-$primary: #0071EA; // update Bootstrap's primary blue color so that the color contrast between this color and #FFF is WCAG AA conformant
+$primary: ##006FE6; // update Bootstrap's primary blue color so that the color contrast between this color and bg-light is WCAG AA conformant
 $code-color: #d6337e;
